# copy-paste

./: Makefile  README.md  pyproject.toml
src/copy_paste/: ipython.py  magic.py
tests/: test_copy_paste.py
