[project]
name = "copy_paste"
version = "0.0.1"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Clipboard utils."
dependencies = [
    "build",
    "pytest",
]

[project.urls]
source = "https://github.com/notarealdeveloper/copy_paste"
download = "https://pypi.org/project/copy-paste/#files"
