[project]
name = "copy_paste"
version = "0.0.2"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Copypasta utils."
dependencies = [
    "build",
    "pytest",
    "IPython",
]

[project.urls]
source = "https://github.com/notarealdeveloper/copy_paste"
download = "https://pypi.org/project/copy-paste/#files"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files = [
    "bin/xc",
]
